src/main/java/JavaByteCodeLanguage/autoGenerated/parser/JavaByteCodeParser.java
// This is a generated file. Not intended for manual editing.
package JavaByteCodeLanguage.autoGenerated.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static JavaByteCodeLanguage.autoGenerated.psi.JavaByteCodeTypes.*;
import static JavaByteCodeLanguage.autoGenerated.parser.JavaByteCodeParserUtil.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class JavaByteCodeParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    if (t == ANNOTATION) {
      r = Annotation(b, 0);
    }
    else if (t == ATTRIBUTES_AREA) {
      r = AttributesArea(b, 0);
    }
    else if (t == CLASS_HEAD) {
      r = ClassHead(b, 0);
    }
    else if (t == DEF_METHOD_NAME) {
      r = DefMethodName(b, 0);
    }
    else if (t == EXCEPTION_TABLE_DECLARATION) {
      r = ExceptionTableDeclaration(b, 0);
    }
    else if (t == FIELD_AREA) {
      r = FieldArea(b, 0);
    }
    else if (t == FIELDS_DECLARATION) {
      r = FieldsDeclaration(b, 0);
    }
    else if (t == INNER_TABLE) {
      r = InnerTable(b, 0);
    }
    else if (t == INSTR) {
      r = Instr(b, 0);
    }
    else if (t == INSTRUCTION_BODY) {
      r = InstructionBody(b, 0);
    }
    else if (t == J_TYPE) {
      r = JType(b, 0);
    }
    else if (t == JAVA_OP) {
      r = JavaOP(b, 0);
    }
    else if (t == LAMBDA_TYPE) {
      r = LambdaType(b, 0);
    }
    else if (t == LINE_NUMBER) {
      r = LineNumber(b, 0);
    }
    else if (t == LOC_VAR_TABLE_DECLARATION) {
      r = LocVarTableDeclaration(b, 0);
    }
    else if (t == LOC_VAR_TYPE_TABLE_BODY) {
      r = LocVarTypeTableBody(b, 0);
    }
    else if (t == LOC_VAR_TYPE_TABLE_DECLARATION) {
      r = LocVarTypeTableDeclaration(b, 0);
    }
    else if (t == METHOD_AREA) {
      r = MethodArea(b, 0);
    }
    else if (t == METHOD_DECLARATION) {
      r = MethodDeclaration(b, 0);
    }
    else if (t == METHOD_HEAD) {
      r = MethodHead(b, 0);
    }
    else if (t == METHOD_NAME) {
      r = MethodName(b, 0);
    }
    else if (t == MODIFIER_V) {
      r = ModifierV(b, 0);
    }
    else if (t == PC_NUMBER) {
      r = PcNumber(b, 0);
    }
    else if (t == STACK_MAP_TABLE_DECLARATION) {
      r = StackMapTableDeclaration(b, 0);
    }
    else if (t == TYPE) {
      r = Type(b, 0);
    }
    else if (t == LAMBDA_PARAMS) {
      r = lambdaParams(b, 0);
    }
    else if (t == PARAMS) {
      r = params(b, 0);
    }
    else {
      r = parse_root_(t, b, 0);
    }
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return jbcFile(b, l + 1);
  }

  /* ********************************************************** */
  // AT JType
  public static boolean Annotation(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Annotation")) return false;
    if (!nextTokenIs(b, AT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, AT);
    r = r && JType(b, l + 1);
    exit_section_(b, m, ANNOTATION, r);
    return r;
  }

  /* ********************************************************** */
  // ATTRIBUTES LBRACKET InnerTable? RBRACKET
  public static boolean AttributesArea(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AttributesArea")) return false;
    if (!nextTokenIs(b, ATTRIBUTES)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, ATTRIBUTES, LBRACKET);
    r = r && AttributesArea_2(b, l + 1);
    r = r && consumeToken(b, RBRACKET);
    exit_section_(b, m, ATTRIBUTES_AREA, r);
    return r;
  }

  // InnerTable?
  private static boolean AttributesArea_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AttributesArea_2")) return false;
    InnerTable(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // ModifierV? (AT?) JAVATYPEHEAD JType (EXTENDS JType)? (IMPLEMENTS (JType(COMMA)?)+)?
  public static boolean ClassHead(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassHead")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CLASS_HEAD, "<class head>");
    r = ClassHead_0(b, l + 1);
    r = r && ClassHead_1(b, l + 1);
    r = r && consumeToken(b, JAVATYPEHEAD);
    r = r && JType(b, l + 1);
    r = r && ClassHead_4(b, l + 1);
    r = r && ClassHead_5(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ModifierV?
  private static boolean ClassHead_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassHead_0")) return false;
    ModifierV(b, l + 1);
    return true;
  }

  // AT?
  private static boolean ClassHead_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassHead_1")) return false;
    consumeToken(b, AT);
    return true;
  }

  // (EXTENDS JType)?
  private static boolean ClassHead_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassHead_4")) return false;
    ClassHead_4_0(b, l + 1);
    return true;
  }

  // EXTENDS JType
  private static boolean ClassHead_4_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassHead_4_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, EXTENDS);
    r = r && JType(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (IMPLEMENTS (JType(COMMA)?)+)?
  private static boolean ClassHead_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassHead_5")) return false;
    ClassHead_5_0(b, l + 1);
    return true;
  }

  // IMPLEMENTS (JType(COMMA)?)+
  private static boolean ClassHead_5_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassHead_5_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IMPLEMENTS);
    r = r && ClassHead_5_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (JType(COMMA)?)+
  private static boolean ClassHead_5_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassHead_5_0_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ClassHead_5_0_1_0(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!ClassHead_5_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ClassHead_5_0_1", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  // JType(COMMA)?
  private static boolean ClassHead_5_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassHead_5_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = JType(b, l + 1);
    r = r && ClassHead_5_0_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COMMA)?
  private static boolean ClassHead_5_0_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassHead_5_0_1_0_1")) return false;
    consumeToken(b, COMMA);
    return true;
  }

  /* ********************************************************** */
  // STRINGVAR
  public static boolean DefMethodName(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DefMethodName")) return false;
    if (!nextTokenIs(b, STRINGVAR)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, STRINGVAR);
    exit_section_(b, m, DEF_METHOD_NAME, r);
    return r;
  }

  /* ********************************************************** */
  // "try" LBRACKET NUMBER COMMA NUMBER RBRACKET "catch" NUMBER (Type|STRINGVAR)
  static boolean ExceptionTableBody(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ExceptionTableBody")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "try");
    r = r && consumeTokens(b, 0, LBRACKET, NUMBER, COMMA, NUMBER, RBRACKET);
    r = r && consumeToken(b, "catch");
    r = r && consumeToken(b, NUMBER);
    r = r && ExceptionTableBody_8(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // Type|STRINGVAR
  private static boolean ExceptionTableBody_8(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ExceptionTableBody_8")) return false;
    boolean r;
    r = Type(b, l + 1);
    if (!r) r = consumeToken(b, STRINGVAR);
    return r;
  }

  /* ********************************************************** */
  // TABLENAME LBRACKET ExceptionTableBody* RBRACKET
  public static boolean ExceptionTableDeclaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ExceptionTableDeclaration")) return false;
    if (!nextTokenIs(b, TABLENAME)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, TABLENAME, LBRACKET);
    r = r && ExceptionTableDeclaration_2(b, l + 1);
    r = r && consumeToken(b, RBRACKET);
    exit_section_(b, m, EXCEPTION_TABLE_DECLARATION, r);
    return r;
  }

  // ExceptionTableBody*
  private static boolean ExceptionTableDeclaration_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ExceptionTableDeclaration_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!ExceptionTableBody(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ExceptionTableDeclaration_2", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // FIELDS LBRACKET FieldsDeclaration* RBRACKET
  public static boolean FieldArea(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FieldArea")) return false;
    if (!nextTokenIs(b, FIELDS)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, FIELDS, LBRACKET);
    r = r && FieldArea_2(b, l + 1);
    r = r && consumeToken(b, RBRACKET);
    exit_section_(b, m, FIELD_AREA, r);
    return r;
  }

  // FieldsDeclaration*
  private static boolean FieldArea_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FieldArea_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!FieldsDeclaration(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "FieldArea_2", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // ModifierV? Type DefMethodName
  public static boolean FieldsDeclaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FieldsDeclaration")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FIELDS_DECLARATION, "<fields declaration>");
    r = FieldsDeclaration_0(b, l + 1);
    r = r && Type(b, l + 1);
    r = r && DefMethodName(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ModifierV?
  private static boolean FieldsDeclaration_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FieldsDeclaration_0")) return false;
    ModifierV(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // STRINGVAR LBRACKET
  //                     (Type LBRACKET ModifierV JAVATYPEHEAD? STRINGVAR RBRACKET)*
  //                RBRACKET
  public static boolean InnerTable(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "InnerTable")) return false;
    if (!nextTokenIs(b, STRINGVAR)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, STRINGVAR, LBRACKET);
    r = r && InnerTable_2(b, l + 1);
    r = r && consumeToken(b, RBRACKET);
    exit_section_(b, m, INNER_TABLE, r);
    return r;
  }

  // (Type LBRACKET ModifierV JAVATYPEHEAD? STRINGVAR RBRACKET)*
  private static boolean InnerTable_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "InnerTable_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!InnerTable_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "InnerTable_2", c)) break;
    }
    return true;
  }

  // Type LBRACKET ModifierV JAVATYPEHEAD? STRINGVAR RBRACKET
  private static boolean InnerTable_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "InnerTable_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Type(b, l + 1);
    r = r && consumeToken(b, LBRACKET);
    r = r && ModifierV(b, l + 1);
    r = r && InnerTable_2_0_3(b, l + 1);
    r = r && consumeTokens(b, 0, STRINGVAR, RBRACKET);
    exit_section_(b, m, null, r);
    return r;
  }

  // JAVATYPEHEAD?
  private static boolean InnerTable_2_0_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "InnerTable_2_0_3")) return false;
    consumeToken(b, JAVATYPEHEAD);
    return true;
  }

  /* ********************************************************** */
  // MNEMONIC (LBRACKET JType COLON Type RBRACKET                       // put someFQN : someFQN
  //                           | LBRACKET NUMBER RBRACKET
  //                           | LBRACKET STRING RBRACKET
  //                           | LBRACKET ((JavaOP|NUMBER|STRING)COMMA?)* RBRACKET   // LDC("someString") or ALOAD(5) or ...
  //                           // TABLESWITCH
  //                           | LBRACKET NUMBER TO NUMBER SEMICOLON
  //                                      (NUMBER SWITCH NUMBER COMMA?)* SEMICOLON?
  //                                      MODIFIER SWITCH NUMBER
  //                             RBRACKET
  //                             // LOOKUPSWITCH(default:34[(case:-127,31)(case:128,26)])
  //                           | LBRACKET MODIFIER COLON NUMBER
  //                                 LBRACKET
  //                                   (LBRACKET CASE COLON NUMBER COMMA NUMBER RBRACKET)*
  //                                 RBRACKET
  //                             RBRACKET
  //                           | JavaOP)?
  public static boolean Instr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Instr")) return false;
    if (!nextTokenIs(b, MNEMONIC)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, MNEMONIC);
    r = r && Instr_1(b, l + 1);
    exit_section_(b, m, INSTR, r);
    return r;
  }

  // (LBRACKET JType COLON Type RBRACKET                       // put someFQN : someFQN
  //                           | LBRACKET NUMBER RBRACKET
  //                           | LBRACKET STRING RBRACKET
  //                           | LBRACKET ((JavaOP|NUMBER|STRING)COMMA?)* RBRACKET   // LDC("someString") or ALOAD(5) or ...
  //                           // TABLESWITCH
  //                           | LBRACKET NUMBER TO NUMBER SEMICOLON
  //                                      (NUMBER SWITCH NUMBER COMMA?)* SEMICOLON?
  //                                      MODIFIER SWITCH NUMBER
  //                             RBRACKET
  //                             // LOOKUPSWITCH(default:34[(case:-127,31)(case:128,26)])
  //                           | LBRACKET MODIFIER COLON NUMBER
  //                                 LBRACKET
  //                                   (LBRACKET CASE COLON NUMBER COMMA NUMBER RBRACKET)*
  //                                 RBRACKET
  //                             RBRACKET
  //                           | JavaOP)?
  private static boolean Instr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Instr_1")) return false;
    Instr_1_0(b, l + 1);
    return true;
  }

  // LBRACKET JType COLON Type RBRACKET                       // put someFQN : someFQN
  //                           | LBRACKET NUMBER RBRACKET
  //                           | LBRACKET STRING RBRACKET
  //                           | LBRACKET ((JavaOP|NUMBER|STRING)COMMA?)* RBRACKET   // LDC("someString") or ALOAD(5) or ...
  //                           // TABLESWITCH
  //                           | LBRACKET NUMBER TO NUMBER SEMICOLON
  //                                      (NUMBER SWITCH NUMBER COMMA?)* SEMICOLON?
  //                                      MODIFIER SWITCH NUMBER
  //                             RBRACKET
  //                             // LOOKUPSWITCH(default:34[(case:-127,31)(case:128,26)])
  //                           | LBRACKET MODIFIER COLON NUMBER
  //                                 LBRACKET
  //                                   (LBRACKET CASE COLON NUMBER COMMA NUMBER RBRACKET)*
  //                                 RBRACKET
  //                             RBRACKET
  //                           | JavaOP
  private static boolean Instr_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Instr_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Instr_1_0_0(b, l + 1);
    if (!r) r = parseTokens(b, 0, LBRACKET, NUMBER, RBRACKET);
    if (!r) r = parseTokens(b, 0, LBRACKET, STRING, RBRACKET);
    if (!r) r = Instr_1_0_3(b, l + 1);
    if (!r) r = Instr_1_0_4(b, l + 1);
    if (!r) r = Instr_1_0_5(b, l + 1);
    if (!r) r = JavaOP(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // LBRACKET JType COLON Type RBRACKET
  private static boolean Instr_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Instr_1_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRACKET);
    r = r && JType(b, l + 1);
    r = r && consumeToken(b, COLON);
    r = r && Type(b, l + 1);
    r = r && consumeToken(b, RBRACKET);
    exit_section_(b, m, null, r);
    return r;
  }

  // LBRACKET ((JavaOP|NUMBER|STRING)COMMA?)* RBRACKET
  private static boolean Instr_1_0_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Instr_1_0_3")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRACKET);
    r = r && Instr_1_0_3_1(b, l + 1);
    r = r && consumeToken(b, RBRACKET);
    exit_section_(b, m, null, r);
    return r;
  }

  // ((JavaOP|NUMBER|STRING)COMMA?)*
  private static boolean Instr_1_0_3_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Instr_1_0_3_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!Instr_1_0_3_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "Instr_1_0_3_1", c)) break;
    }
    return true;
  }

  // (JavaOP|NUMBER|STRING)COMMA?
  private static boolean Instr_1_0_3_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Instr_1_0_3_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Instr_1_0_3_1_0_0(b, l + 1);
    r = r && Instr_1_0_3_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // JavaOP|NUMBER|STRING
  private static boolean Instr_1_0_3_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Instr_1_0_3_1_0_0")) return false;
    boolean r;
    r = JavaOP(b, l + 1);
    if (!r) r = consumeToken(b, NUMBER);
    if (!r) r = consumeToken(b, STRING);
    return r;
  }

  // COMMA?
  private static boolean Instr_1_0_3_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Instr_1_0_3_1_0_1")) return false;
    consumeToken(b, COMMA);
    return true;
  }

  // LBRACKET NUMBER TO NUMBER SEMICOLON
  //                                      (NUMBER SWITCH NUMBER COMMA?)* SEMICOLON?
  //                                      MODIFIER SWITCH NUMBER
  //                             RBRACKET
  private static boolean Instr_1_0_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Instr_1_0_4")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, LBRACKET, NUMBER, TO, NUMBER, SEMICOLON);
    r = r && Instr_1_0_4_5(b, l + 1);
    r = r && Instr_1_0_4_6(b, l + 1);
    r = r && consumeTokens(b, 0, MODIFIER, SWITCH, NUMBER, RBRACKET);
    exit_section_(b, m, null, r);
    return r;
  }

  // (NUMBER SWITCH NUMBER COMMA?)*
  private static boolean Instr_1_0_4_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Instr_1_0_4_5")) return false;
    while (true) {
      int c = current_position_(b);
      if (!Instr_1_0_4_5_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "Instr_1_0_4_5", c)) break;
    }
    return true;
  }

  // NUMBER SWITCH NUMBER COMMA?
  private static boolean Instr_1_0_4_5_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Instr_1_0_4_5_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, NUMBER, SWITCH, NUMBER);
    r = r && Instr_1_0_4_5_0_3(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // COMMA?
  private static boolean Instr_1_0_4_5_0_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Instr_1_0_4_5_0_3")) return false;
    consumeToken(b, COMMA);
    return true;
  }

  // SEMICOLON?
  private static boolean Instr_1_0_4_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Instr_1_0_4_6")) return false;
    consumeToken(b, SEMICOLON);
    return true;
  }
